feature: 小屏显示方案

--- a/app/routes/blog/first-post.mdx
+++ b/app/routes/blog/first-post.mdx
@@ -1,8 +1,11 @@
 ---
 title: First Post！
 meta: 
-  title: Second Post！
-  description: 这是我的第一篇文章
+  title: 使用python-django搭建个人技术博客
+  description: 这是django3.2框架的入门实战教学
+  keywords: python, django, flask, tornado, tornado-django    
+  image: https://images.unsplash.com/photo-1643874626341-86b9b950a675?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80
+  date: 2022-02-03
 ---
 
 ## 虚拟环境配置
