--- a/app/routes/blog/second-post.mdx
+++ b/app/routes/blog/second-post.mdx
@@ -1,8 +1,11 @@
 ---
-title: Second Post！
 meta: 
-  title: Second Post！
+  title: 第二篇测试文章！
   description: 这是我的第二篇文章
+  image: https://images.unsplash.com/photo-1643874626341-86b9b950a675?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80
+  date: 2022-02-03
 ---
 
 ## 这是第二个文章
+
+此文章没有代码
