添加饥荒教程

--- a/app/routes/blog/first-post.mdx
+++ b/app/routes/blog/first-post.mdx
@@ -300,6 +300,8 @@ python manage.py makemigrations
 python manage.py migrate
 ```
 
+
+
 ## 静态文件配置
 
 静态文件目录是一个项目必要的
@@ -308,3 +310,14 @@ python manage.py migrate
 from django.conf import settings
 from djangoj.contrib.staticfiles.urls import staticfiles_urlpatterns
 ```
+
+
+
+## 模板文件的编写
+
+模板的固定写在 应用包/templates下即可，因为页面不是我们的重点，所以已经给你们准备好了页面模板
+
+https://musetransfer.com/s/ngxz2x971（有效期至2023年2月4日）
+
+
+
